[package]
name = "adb"
version = "0.1.0"
authors = ["Irsyad Asyhari Lubis <irsyad.lubis@esrlabs.com>"]
edition = "2018"

[dependencies]
rogcat = { path = "../../../../../rogcat" }
indexer_base = { path = "../indexer_base" }
buf_redux = "0.8.1"
log = "0.4.6"
failure = "0.1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]